Try fix predicate
Signed-off-by: Xuanwo <github@xuanwo.io>

--- a/src/query/storages/iceberg/Cargo.toml
+++ b/src/query/storages/iceberg/Cargo.toml
@@ -33,6 +33,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 typetag = { workspace = true }
 uuid = { workspace = true }
+log = "0.4.22"
 
 [lints]
 workspace = true
