feat: Add hdfs support in iceberg and fill iceberg statistics (#17352)
* feat: Add hdfs support in iceberg

Signed-off-by: Xuanwo <github@xuanwo.io>

* Enable webhdfs support

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix iceberg support

Signed-off-by: Xuanwo <github@xuanwo.io>

* Add table statistics for iceberg

Signed-off-by: Xuanwo <github@xuanwo.io>

* Also implement column statistics

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix scan

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix ndv is wrong

Signed-off-by: Xuanwo <github@xuanwo.io>

* Add more info in iceberg table

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix column id

Signed-off-by: Xuanwo <github@xuanwo.io>

* Add debug for inner join

Signed-off-by: Xuanwo <github@xuanwo.io>

* Try fix tests

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix tests

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix system tables query

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix stats not calculated correctly

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix stats

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix stats

Signed-off-by: Xuanwo <github@xuanwo.io>

* Try fix predicate

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix lock not updated

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix cargo

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix tests

Signed-off-by: Xuanwo <github@xuanwo.io>

* revert scan changes

Signed-off-by: Xuanwo <github@xuanwo.io>

* Revert changes to tests

Signed-off-by: Xuanwo <github@xuanwo.io>

* Revert change to tests

Signed-off-by: Xuanwo <github@xuanwo.io>

---------

Signed-off-by: Xuanwo <github@xuanwo.io>

--- a/src/query/storages/iceberg/Cargo.toml
+++ b/src/query/storages/iceberg/Cargo.toml
@@ -20,6 +20,7 @@ databend-common-meta-app = { workspace = true }
 databend-common-meta-store = { workspace = true }
 databend-common-meta-types = { workspace = true }
 databend-common-pipeline-core = { workspace = true }
+databend-common-storage = { workspace = true }
 databend-common-storages-parquet = { workspace = true }
 databend-storages-common-table-meta = { workspace = true }
 fastrace = { workspace = true }
@@ -28,9 +29,11 @@ iceberg = { workspace = true }
 iceberg-catalog-glue = { workspace = true }
 iceberg-catalog-hms = { workspace = true }
 iceberg-catalog-rest = { workspace = true }
+log = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 typetag = { workspace = true }
+uuid = { workspace = true }
 
 [lints]
 workspace = true
