feat(metrics): add progress metrics via collector (#17359)
* add query scan rows metrics

* fix build

* register the metrics

* track scan & write progress

* track spill progress

* refactor

* attach session manager to it

* update the finished query

* finish the metrics

* fix clippy

* fix header

* fix cargo fmt

* fix tablo

--- a/src/query/service/Cargo.toml
+++ b/src/query/service/Cargo.toml
@@ -150,6 +150,7 @@ paste = { workspace = true }
 petgraph = { workspace = true }
 pin-project-lite = { workspace = true }
 poem = { workspace = true }
+prometheus-client = { workspace = true }
 prost = { workspace = true }
 rand = { workspace = true }
 recursive = { workspace = true }
