fix(query): try fix stackoverflow

--- a/src/query/ast/Cargo.toml
+++ b/src/query/ast/Cargo.toml
@@ -37,6 +37,7 @@ strum = { workspace = true }
 strum_macros = { workspace = true }
 unindent = { workspace = true }
 url = { workspace = true }
+educe = { workspace = true }
 
 [dev-dependencies]
 criterion = { workspace = true }
