--- a/Cargo.toml
+++ b/Cargo.toml
@@ -288,7 +288,7 @@ derive-visitor = { version = "0.4.0", features = ["std-types-drive"] }
 derive_more = { version = "1.0.0", features = ["full"] }
 dtparse = { git = "https://github.com/datafuse-extras/dtparse.git", rev = "30e28ca" }
 dyn-clone = "1.0.9"
-educe = { version = "0.6", features = ["default", "full"] } # FIXME: failed to upgrade to educe 0.6
+educe = { version = "0.6", features = ["default", "full"] }
 either = "1.9"
 enquote = "1.1.0"
 enum-as-inner = "0.6"
@@ -624,6 +624,7 @@ async-recursion = { git = "https://github.com/datafuse-extras/async-recursion.gi
 backtrace = { git = "https://github.com/rust-lang/backtrace-rs.git", rev = "72265be" }
 color-eyre = { git = "https://github.com/eyre-rs/eyre.git", rev = "e5d92c3" }
 deltalake = { git = "https://github.com/delta-io/delta-rs", rev = "3038c145" }
+educe = { git = "https://github.com/zhang2014/educe.git", rev = "ab34a19" }
 ethnum = { git = "https://github.com/datafuse-extras/ethnum-rs", rev = "4cb05f1" }
 openai_api_rust = { git = "https://github.com/datafuse-extras/openai-api", rev = "819a0ed" }
 openraft = { git = "https://github.com/databendlabs/openraft", tag = "v0.10.0-alpha.7" }
@@ -634,4 +635,3 @@ tantivy = { git = "https://github.com/datafuse-extras/tantivy", rev = "7502370" 
 tantivy-common = { git = "https://github.com/datafuse-extras/tantivy", rev = "7502370", package = "tantivy-common" }
 tantivy-jieba = { git = "https://github.com/datafuse-extras/tantivy-jieba", rev = "0e300e9" }
 xorfilter-rs = { git = "https://github.com/datafuse-extras/xorfilter", tag = "databend-alpha.4" }
-educe = { git = "https://github.com/zhang2014/educe.git", rev = "ab34a19" }
