fix(query): fix stack overflow if excessive use of union all (#17475)
* fix(query): add stateless tests

* fix(query): add recursive for clone

* fix(query): try fix stackoverflow

* fix(query): try fix stackoverflow

* fix(query): try fix stackoverflow

* fix(query): try fix stackoverflow

* fix(query): try fix stackoverflow

* fix(query): try fix stackoverflow

* fix(query): try fix stackoverflow

* fix(query): try fix stackoverflow

--- a/src/common/exception/Cargo.toml
+++ b/src/common/exception/Cargo.toml
@@ -11,7 +11,6 @@ doctest = false
 test = true
 
 [dependencies]
-databend-common-ast = { workspace = true }
 
 anyhow = { workspace = true }
 arrow-flight = { workspace = true }
@@ -19,6 +18,7 @@ arrow-schema = { workspace = true }
 backtrace = { workspace = true, features = ["std", "serialize-serde"] }
 bincode = { workspace = true }
 cidr = { workspace = true }
+derive-visitor = { workspace = true }
 geozero = { workspace = true }
 gimli = { workspace = true }
 http = { workspace = true }
@@ -32,6 +32,7 @@ paste = { workspace = true }
 prost = { workspace = true }
 redis = { workspace = true }
 reqwest = { workspace = true }
+rspack-codespan-reporting = { workspace = true }
 rustc-demangle = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
