--- a/src/query/ast/Cargo.toml
+++ b/src/query/ast/Cargo.toml
@@ -12,7 +12,9 @@ repository = "https://github.com/datafuselabs/databend/tree/main/src/query/ast"
 doctest = false
 
 [dependencies]
+databend-common-exception = { workspace = true }
 derive-visitor = { workspace = true }
+educe = { workspace = true }
 enum-as-inner = { workspace = true }
 ethnum = { workspace = true }
 fast-float2 = { workspace = true }
@@ -27,7 +29,6 @@ percent-encoding = { workspace = true }
 pratt = { workspace = true }
 pretty_assertions = { workspace = true }
 recursive = { workspace = true }
-rspack-codespan-reporting = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 strsim = { workspace = true }
