--- a/src/query/storages/common/table_meta/Cargo.toml
+++ b/src/query/storages/common/table_meta/Cargo.toml
@@ -19,6 +19,7 @@ databend-common-base = { workspace = true }
 databend-common-datavalues = { workspace = true }
 databend-common-exception = { workspace = true }
 databend-common-expression = { workspace = true }
+databend-common-functions = { workspace = true }
 databend-common-io = { workspace = true }
 databend-common-native = { workspace = true }
 databend-common-storage = { workspace = true }
