--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -456,25 +456,6 @@ jobs:
         run: |
           gh release edit ${{ needs.create_release.outputs.version }} --draft=false
 
-  deb:
-    runs-on: ubuntu-latest
-    needs: [create_release, distribution]
-    if: needs.create_release.outputs.type == 'stable'
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ needs.create_release.outputs.sha }}
-      - uses: ./.github/actions/publish_deb
-        env:
-          GH_TOKEN: ${{ github.token }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.R2_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.R2_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: auto
-          AWS_ENDPOINT_URL: ${{ secrets.R2_ENDPOINT_URL }}
-        with:
-          version: ${{ needs.create_release.outputs.version }}
-          gpg_signing_key: ${{ secrets.GPG_KEY_DEB }}
-
   sha256sums:
     needs: [create_release, publish, distribution]
     runs-on: ubuntu-latest
@@ -594,3 +575,8 @@ jobs:
       version: ${{ needs.create_release.outputs.version }}
       runner_provider: aws
       target: all
+
+  deb:
+    needs: [create_release, distribution, notify]
+    uses: ./.github/workflows/deb.yml
+    secrets: inherit
