--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -33,6 +33,7 @@ jobs:
             benchmark/**
             docker/**
             scripts/setup/**
+            scripts/distribution/**
             .devcontainer/**
       - name: Output Source File Changes
         run: |
