--- a/.github/actions/pack_binaries/action.yml
+++ b/.github/actions/pack_binaries/action.yml
@@ -52,7 +52,6 @@ runs:
         cp ./scripts/distribution/systemd/databend-* distro/systemd/
         cp ./scripts/distribution/configs/databend-* distro/configs/
         cp ./scripts/distribution/release-readme.txt distro/readme.txt
-        cp -r ./scripts/distribution/local-scripts/* distro/scripts/
         cp -r ./scripts/distribution/package-scripts/* distro/scripts/
         tar -C ./distro --exclude='*.debug' -czvf ${pkg_name}.tar.gz bin configs systemd scripts readme.txt
         sha256sum ${pkg_name}.tar.gz >> sha256-${pkg_name}.txt
@@ -77,17 +76,16 @@ runs:
         version=${{ inputs.version }}
         case ${{ inputs.category }} in
           default)
-            pkg_name="databend-${version}-${target}-dbg"
+            pkg_name="databend-dbg-${version}-${target}"
             ;;
           *)
-          pkg_name="databend-${{ inputs.category }}-${version}-${target}-dbg"
+          pkg_name="databend-dbg-${{ inputs.category }}-${version}-${target}"
             ;;
         esac
         mkdir -p distro/{bin,configs,systemd,scripts}
         cp ./scripts/distribution/systemd/databend-* distro/systemd/
         cp ./scripts/distribution/configs/databend-* distro/configs/
         cp ./scripts/distribution/release-readme.txt distro/readme.txt
-        cp -r ./scripts/distribution/local-scripts/* distro/scripts/
         cp -r ./scripts/distribution/package-scripts/* distro/scripts/
         tar -C ./distro -czvf ${pkg_name}.tar.gz bin configs systemd scripts readme.txt
         sha256sum ${pkg_name}.tar.gz >> sha256-${pkg_name}.txt
