--- a/scripts/distribution/nfpm-query-dbg.yaml
+++ b/scripts/distribution/nfpm-query-dbg.yaml
@@ -1,16 +1,17 @@
-name: "${name}"
+name: "databend-query-dbg"
 arch: "${arch}"
 platform: "linux"
 version: "${version}"
 section: "database"
 priority: "extra"
-maintainer: "Databend Authors <opensource@datafuselabs.com>"
+maintainer: "Databend Labs <opensource@databend.com>"
 description: |
-  Databend is a powerful cloud data warehouse. Built for elasticity and efficiency.
-  Free and open. Also available in the cloud: https://app.databend.com
-vendor: "Datafuse Labs"
+  Debug symbols for databend-query
+vendor: "Databend Labs"
 homepage: "https://databend.com"
 license: "Apache-2.0"
+depends:
+  - databend-query
 contents:
   # Binaries
   - src: ${path}/bin/databend-query.debug
