--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,7 +107,7 @@ members = [
     "src/meta/service",
     "tests/sqllogictests",
     "src/tests/sqlsmith",
-    "src/bendsave"
+    "src/bendsave",
 ]
 
 # Workspace dependencies
@@ -295,6 +295,7 @@ enquote = "1.1.0"
 enum-as-inner = "0.6"
 enum_dispatch = "0.3.13"
 enumflags2 = { version = "0.7.7", features = ["serde"] }
+epochfs = "0.1.1"
 ethnum = { version = "1.5.0" }
 fallible-streaming-iterator = "0.1"
 faststr = "0.2"
@@ -370,10 +371,10 @@ num-derive = "0.3.3"
 num-traits = "0.2.19"
 num_cpus = "1.13.1"
 object = "0.36.5"
-object_store_opendal = { version = "0.49.0", package = "object_store_opendal", git = "https://github.com/apache/opendal", rev = "78b6a9f" }
+object_store_opendal = { version = "0.49.1" }
 once_cell = "1.15.0"
 openai_api_rust = "0.1"
-opendal = { version = "0.51.1", package = "opendal", git = "https://github.com/apache/opendal", rev = "78b6a9f", features = [
+opendal = { version = "0.51.2", package = "opendal", features = [
     "layers-fastrace",
     "layers-prometheus-client",
     "layers-async-backtrace",
@@ -526,6 +527,7 @@ zstd = "0.12.3"
 cargo-license = "0.6.1"
 cargo_metadata = "0.18"
 fast-float2 = "0.2.3"
+form_urlencoded = { version = "1" }
 gix = "0.63.0"
 indent = "0.1.1"
 logos = "0.12.1"
