chore(query): add placeholder parser (#17481)
* chore(query): add placeholder parser

* chore(query): add placeholder parser

* chore(query): fix dep

* chore(query): fix dep

* chore(query): fix lint

* chore(query): fix x

* keep json op

* fix

* chore(query): export StatementReplacer

* chore(query): export StatementReplacer

* rename to databend-educe

* remove feature

* upgrade

* upgrade

---------

Co-authored-by: baishen <baishen2009@gmail.com>

--- a/src/common/exception/Cargo.toml
+++ b/src/common/exception/Cargo.toml
@@ -12,13 +12,14 @@ test = true
 
 [dependencies]
 
+databend-common-ast = { workspace = true }
+
 anyhow = { workspace = true }
 arrow-flight = { workspace = true }
 arrow-schema = { workspace = true }
 backtrace = { workspace = true, features = ["std", "serialize-serde"] }
 bincode = { workspace = true }
 cidr = { workspace = true }
-derive-visitor = { workspace = true }
 geozero = { workspace = true }
 gimli = { workspace = true }
 http = { workspace = true }
@@ -32,7 +33,6 @@ paste = { workspace = true }
 prost = { workspace = true }
 redis = { workspace = true }
 reqwest = { workspace = true }
-rspack-codespan-reporting = { workspace = true }
 rustc-demangle = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
