--- a/src/query/config/Cargo.toml
+++ b/src/query/config/Cargo.toml
@@ -31,6 +31,7 @@ log = { workspace = true }
 serde = { workspace = true }
 serde_with = { workspace = true }
 serfig = { workspace = true }
+serde_ignored = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = { workspace = true }
