--- a/Cargo.toml
+++ b/Cargo.toml
@@ -457,6 +457,7 @@ serde_test = "1.0"
 serde_urlencoded = "0.7.1"
 serde_with = { version = "3.8.1" }
 serfig = "0.1.0"
+serde_ignored = "0.1.10"
 sha1 = "0.10.5"
 sha2 = "0.10.8"
 simdutf8 = "0.1.4"
