--- a/Cargo.toml
+++ b/Cargo.toml
@@ -493,7 +493,7 @@ tikv-jemalloc-ctl = { version = "0.6.0", features = ["use_std", "stats"] }
 tikv-jemalloc-sys = "0.6.0"
 tokio = { version = "1.35.0", features = ["full"] }
 tokio-stream = "0.1.11"
-toml = { version = "0.8", default-features = false }
+toml = { version = "0.8", features = ["parse"] }
 tonic = { version = "0.12.3", features = ["transport", "codegen", "prost", "tls-roots", "tls"] }
 tonic-build = { version = "0.12.3" }
 tonic-reflection = { version = "0.12.3" }
