--- a/src/query/config/Cargo.toml
+++ b/src/query/config/Cargo.toml
@@ -37,6 +37,7 @@ anyhow = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = { workspace = true }
+tempfile = { workspace = true }
 
 [build-dependencies]
 databend-common-building = { workspace = true }
