--- a/src/query/service/Cargo.toml
+++ b/src/query/service/Cargo.toml
@@ -172,7 +172,7 @@ sysinfo = { workspace = true }
 tempfile = { workspace = true }
 tokio = { workspace = true }
 tokio-stream = { workspace = true, features = ["net"] }
-toml = { workspace = true, default-features = false }
+toml = { workspace = true, features = ["parse"] }
 tonic = { workspace = true }
 typetag = { workspace = true }
 url = { workspace = true }
