ci/depoly/config: add limit = 12 config

--- a/scripts/ci/deploy/config/databend-query-node-2.toml
+++ b/scripts/ci/deploy/config/databend-query-node-2.toml
@@ -57,6 +57,7 @@ definition = "CREATE FUNCTION ping(STRING) RETURNS STRING LANGUAGE python HANDLE
 level = "INFO"
 format = "text"
 dir = "./.databend/logs_2"
+limit = 12 # 12 files, 1 file per hour
 
 [log.structlog]
 on = true
